build: deploy websites

--- a/examples/canvas.html
+++ b/examples/canvas.html
@@ -5,7 +5,7 @@
 <body>
   <canvas id="canvas"></canvas>
 </body>
-<script src="../dist/iife/index.js"></script>
+<script src="./dist/iife/index.js"></script>
 <script>
   /***************************************************
    * Define components 
