--- a/examples/three.html
+++ b/examples/three.html
@@ -12,7 +12,7 @@
 <body>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.js"></script>
-<script src="../dist/iife/index.js"></script>
+<script src="./dist/iife/index.js"></script>
 <script src="./three/components.js"></script>
 <script src="./three/systems.js"></script>
 <script>
